Add: API Environtment, and Helpers for API

--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
+#Konfigurasi untuk database
 DB_HOST=localhost
 DB_NAME=moonphp
 DB_USERNAME=root
 DB_PASSWORD=
+
+#Konfigurasi untuk aplikasi
+APP_NAME=MoonPHP
+APP_VERSION=1.0.0
+
+# Konfigurasi untuk API
+# Ubah nilai ini menjadi true jika Anda ingin mengaktifkan API
+API=false
